# so_arm

./: LICENSE
mechanics/: GloveRemover.fcstd  GloveRemover.stl  GripperGlove.fcstd  GripperGlove.stl  RAOAQ1.fcstd  RAOAQ2.fcstd  RAUA.fcstd  RAUACW.fcstd  RAUAQ1.fcstd  RAUAQ2.fcstd  RAWP1.fcstd  RAWP2.fcstd  RobotArmBase.fcstd  RobotArmBaseBottomCut.fcstd  RobotArmBaseDistanceRingsCut.fcstd  RobotArmBaseDistanceRingsCut2.fcstd  RobotArmBasePlateCut.fcstd  RobotArmBaseStandCut.fcstd  RobotArmBaseTopCut.fcstd  RobotArmPlate.fcstd
so_arm/: CHANGELOG.rst  CMakeLists.txt  package.xml
so_arm_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
so_arm_bringup/config/: so_arm.yaml  so_arm.yaml.20160229  so_gripper.yaml
so_arm_bringup/launch/: arm.launch  arm1.launch  so.launch
so_arm_bringup/scripts/: fake_joint_pub.py
so_arm_description/: CMakeLists.txt  package.xml  test.launch
so_arm_description/meshes/: gripper_finger_left.stl  gripper_finger_pad.stl  gripper_finger_right.stl  gripper_wrist.stl  servo.stl
so_arm_description/urdf/: gripper.urdf  so_arm.urdf
so_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml  t4.txt
so_arm_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  so_arm.srdf  so_arm.srdf.mw
so_arm_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  (+3 more)
so_arm_nav/: CMakeLists.txt  package.xml  setup.py
(+15 files in other folders)
